bug fixes and improvements

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,3 +17,6 @@ commands:
   credits:
     description: credits and source code
     usage: /credits
+  spawn:
+    description: tps players back to spawn
+    usage: /spawn
